# shellgpt

./: .gitignore  Makefile  README.md  contents.json  download-contents.py  download-roles.py  pyproject.toml  requirements.txt  roles.json
.github/workflows/: ci.yml  release.yml
shellgpt/: __init__.py  app.py  history.py  main.py
shellgpt/api/: bailing.py  llm.py  ollama.py
shellgpt/db/: duckdb.py
shellgpt/tui/: app.py  app.tcss
shellgpt/utils/: common.py  conf.py
shgpt/: __main__.py  app.py  history.py  main.py
shgpt/api/: history.py  ollama.py
shgpt/tui/: app.py
shgpt/utils/: common.py  conf.py  http.py
tests/: test_common.py  test_llm.py
